--- a/css/estilos.css
+++ b/css/estilos.css
@@ -21,6 +21,44 @@
     color: white;
 }
 
+.input-busqueda{
+    display: block;
+    width: 100%;
+    height: calc(1.5em + .75rem + 2px);
+    padding: .375rem .75rem!important;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #495057!important;
+    background-color: #fff!important;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: .25rem;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+
+}
+
+.paginacion-ul{
+    display: flex;
+    justify-content: center;
+}
+
+.paginacion-ul .active{
+    background-color: red;
+    color: white;
+    border-radius: 5px;
+}
+.paginacion-ul li{
+    list-style-type: none!important;
+    font-size: 1.1rem;
+    padding: 8px 12px;
+}
+
+.paginacion-ul li a{
+    color: black;
+}
+
+
 @media (max-width: 575.98px) {
     #searchsubmit{
         width: 100%;
